--- a/sass/style.sass
+++ b/sass/style.sass
@@ -371,28 +371,21 @@ a, button, input
             width: 450px
 
 .many-bread
-    height: auto
-    &__row
-        width: 100%
     &__item
-        width: 16.665%
-        display: block
-        float: left
-        img
-            width: 100%
-            display: block
-            transition: .6s
-            filter: grayscale(80%)
-            // filter: sepia(150%)
-            &:hover
-                filter: grayscale(0%)
+        margin-bottom: -5px
+    img
+        width: 100%
+        transition: .6s
+        filter: grayscale(80%)
+        &:hover
+            filter: grayscale(0%)
 
 .map
     width: 100%
     height: 500px
     background: url('/img/map.png') center center no-repeat
     background-size: cover
-    display: inline-block
+    display: block
     img
         width: 100%
         display: none
@@ -400,7 +393,6 @@ a, button, input
 footer
     padding-top: 35px
     padding-bottom: 40px
-    margin-top: -5px
     min-height: 150px
     background-color: #363636
     color: #fefefe
@@ -494,11 +486,8 @@ footer
         right: -20px
         width: 120%
 
-    .many-bread__item
-        width: 20%
-        &:last-child
-            display: none
-
+    .many-bread__item:nth-child(3n)
+        display: none
     .map
         height: 400px
 
@@ -549,10 +538,10 @@ footer
         img
             width: 100%
 
-    .many-bread__item
-        width: 25%
-        &:first-child
-            display: none
+    .many-bread__item:nth-child(3n)
+        display: block
+    .many-bread__item:nth-child(2n)
+        display: none
 
     .map
         height: 350px
@@ -652,10 +641,10 @@ footer
             width: auto
             margin-left: auto
 
-    .many-bread__item
-        width: 33.33%
-        &:nth-child(2)
-            display: none
+    // .many-bread__item
+    //     width: 33.33%
+    //     &:nth-child(2)
+    //         display: none
 
     .map
         height: 250px
